Output/slurm-735932.out
  File "/gpfs/mariana/home/akkusu/TBT-practice/TBT_for_VGG.py", line 381
    def fgsm(self, model, data, tar, high=100, ...):
                                               ^^^
SyntaxError: invalid syntax
